刑事訴訟法 1999.3.30

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -254,9 +254,9 @@
 
 > 釋：羈押處分，剝奪人民身體之自由，嚴重影響人民權益，現行條文規定之羈押要件及羈押理由，尚嫌簡略，爰就羈押之要件及羈押之理由設更明確且嚴謹之規定，用符法制。又為使被告於受訊問時，有辯護人到場，俾能對被告為適當之保障，增訂第二項明定應告知被告得選任辯護人到場，以資明確；另規定第一項所依據之事實，應告知被告及其辯護人，並記載於筆錄，以資周延。
 
-* 101.1 被告經法官訊問後，認為犯左列各款之罪，其嫌疑重大，有事實足認為有反覆實施同一犯罪之虞，而有羈押之必要者，得羈押之：一、刑法第一百七十四條第一項、第二項、第四項、第一百七十五條第一項、第二項之放火罪、第一百七十六條之準放火罪。二、刑法第二百二十四條之強制猥褻罪、第二百二十七條姦淫或猥褻罪、第二百七十七條第一項之傷害罪。但未經告訴或其告訴已經撤回或已逾告訴期間者，不在此限。三、刑法第三百零二條之妨害自由罪。四、刑法第三百零四條強制罪、第三百零五條之恐嚇危害安全罪。五、刑法第三百二十一條、第三百二十二條之竊盜罪。六、刑法第三百二十五條至第三百二十七條之搶奪罪。七、刑法第三百二十九條之準強盜罪。八、刑法第三百四十條之常業詐欺罪。九、刑法第三百四十六條之恐嚇取財罪。前條第二項、第三項之規定，於前項情形準用之。
+* 101.1 被告經法官訊問後，認為犯左列各款之罪，其嫌疑重大，有事實足認為有反覆實施同一犯罪之虞，而有羈押之必要者，得羈押之：一、刑法第一百七十四條第一項、第二項、第四項、第一百七十五條第一項、第二項之放火罪、第一百七十六條之準放火罪。二、刑法第二百二十四條之強制猥褻罪、第二百二十七條與幼年男女性交或猥褻罪、第二百七十七條第一項之傷害罪。但未經告訴或其告訴已經撤回或已逾告訴期間者，不在此限。三、刑法第三百零二條之妨害自由罪。四、刑法第三百零四條強制罪、第三百零五條之恐嚇危害安全罪。五、刑法第三百二十一條、第三百二十二條之竊盜罪。六、刑法第三百二十五條至第三百二十七條之搶奪罪。七、刑法第三百二十九條之準強盜罪。八、刑法第三百四十條之常業詐欺罪。九、刑法第三百四十六條之恐嚇取財罪。前條第二項、第三項之規定，於前項情形準用之。
 
-> 釋：一、本條新增。二、被告經法官訊問後，雖有第一百零一條第一項各款情形，而無羈押必要者，得逕命具保、責付或限制住居，與前條之羈押，均屬訊問被告後之程序，為使法條次序連貫，爰將現行法第一百二十條修正移列本條，並配合羈押要件之修正，將現行條文所引「第七十六條」修正為「前條第一項」。
+> 釋：配合刑法第二百二十七條文字之修正作修改。將「姦淫或猥褻罪」修改為「與幼年男女性交或猥褻罪」。
 
 * 101.2 被告經法官訊問後，雖有第一百零一條第一項或第一百零一條之一第一項各款所定情形之一而無羈押之必要者，得逕命具保、責付或限制住居；其有第一百十四條各款所定情形之一者，非有不能具保、責付或限制住居之情形，不得羈押。
 
@@ -392,7 +392,9 @@
 
 > 釋：八十六年十二月十九日立法院三讀通過條文，已將第一百條之二列移修正為第一百條之三，爰配合修正。
 
-* 147 左列處所，夜間亦得入內搜索或扣押：一、假釋人住居或使用者。二、旅店、飲食店或其他於夜間公眾可以出入之處所，仍在公開時間內者。三、常用為賭博或妨害風化之行為者。
+* 147 左列處所，夜間亦得入內搜索或扣押：一、假釋人住居或使用者。二、旅店、飲食店或其他於夜間公眾可以出入之處所，仍在公開時間內者。三、常用為賭博，妨害性自主或妨害風化之行為者。
+
+> 釋：配合刑法第十六章章名之修正作修改。將「賭博或妨害風化」修改為賭博、妨害性自主或妨害風化」。
 
 * 148 在有人住居或看守之住宅或其他處所內行搜索或扣押者，應命住居人、看守人或可為其代表之人在場；如無此等人在場時，得命鄰居之人或就近自治團體之職員在場。
 
