--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -16,7 +16,9 @@
 
 * 9 同一行為，雖經外國確定裁判，仍得依本法處斷。但在外國已受刑之全部或一部執行者，得免其刑之全部或一部之執行。
 
-* 10 稱以上、以下、以內者，俱連本數或本刑計算。稱公務員者，謂依法令從事於公務之人員。稱公文書者，謂公務員職務上制作之文書。稱重傷者，謂左列傷害：一、毀敗一目或二目之視能。二、毀敗一耳或二耳之聽能。三、毀敗語能、味能或嗅能。四、毀敗一肢以上之機能。五、毀敗生殖之機能。六、其他於身體或健康有重大不治或難治之傷害。
+* 10 稱以上、以下、以內者，俱連本數或本刑計算。稱公務員者，謂依法令從事於公務之人員。稱公文書者，謂公務員職務上制作之文書。稱重傷者，謂左列傷害：一、毀敗一目或二目之視能。二、毀敗一耳或二耳之聽能。三、毀敗語能、味能或嗅能。四、毀敗一肢以上之機能。五、毀敗生殖之機能。六、其他於身體或健康，有重大不治或難治之傷害。稱性交者，謂左列性侵入行為：一、以性器進入他人之性器、肛門或口腔之行為。二、以性器以外之其他身體部位或器物進入他人之性器、肛門之行為。
+
+> 釋：配合刑法第十六章等之修正，增列「性交」之定義。
 
 * 11 本法總則於其他法令有刑罰之規定者，亦適用之。但其他法令有特別規定者，不在此限。
 
@@ -150,9 +152,9 @@
 
 * 76 緩刑期滿，而緩刑之宣告未經撤銷者，其刑之宣告，失其效力。
 
-* 77 受徒刑之執行而有悛悔實據者，無期徒刑逾十五年、累犯逾二十年，有期徒刑逾二分之一、累犯逾三分之二，由監獄報請法務部，得許假釋出獄。但有期徒刑之執行未滿六個月者，不在此限。無期徒刑裁判確定前逾一年部分之羈押日數算入前項已執行之期間內。犯刑法第十六章妨害風化各條之罪者，非經強制診療，不得假釋。
+* 77 受徒刑之執行而有悛悔實據者，無期徒刑逾十五年、累犯逾二十年，有期徒刑逾二分之一、累犯逾三分之二，由監獄報請法務部，得許假釋出獄。但有期徒刑之執行未滿六個月者，不在此限。無期徒刑裁判確定前逾一年部分之羈押日數算入前項已執行之期間內。
 
-> 釋：一、按假釋之目的在於鼓勵受刑人改過自新，給予受刑人提前出獄，重返自由社會，以利其更生。但近年來，入監受刑人之累再犯比例日漸上昇，可見目前假釋要件之規定未能適當發揮監獄教化之功能，故有必要再嚴謹假釋要件，以符合全民對社會安全之期待。爰將本條有期徒刑執行期間再修正為逾二分之一，累犯逾三分之二。又為免受刑人執行期間過短，監獄無從確實考核其行狀是否改善，爰修正其執行最低期間為六個月，以使監獄教化及考核之工作能更加落實。二、參考外國立法例，並參酌我國撤銷假釋及累再犯人數消長之趨勢，將無期徒刑執行之期間修正為逾十五年，累犯逾二十年以資衡平。
+> 釋：因刑法修正已增設第九十一條之一相應規定，故第三項應予刪除。
 
 * 78 假釋中因故意更犯罪，受有期徒刑以上刑之宣告者，撤銷其假釋。前項犯罪，其起訴及判決確定均在假釋期滿前者，於假釋期滿後六月以內，仍撤銷其假釋；其判決確定在假釋期滿後者，於確定後六月以內，撤銷之。假釋撤銷後，其出獄日數不算入刑期內。
 
@@ -189,6 +191,10 @@
 * 90 有犯罪之習慣或以犯罪為常業或因遊蕩或懶惰成習而犯罪者，得於刑之執行完畢或赦免後，令入勞動場所，強制工作。前項處分期間，為三年以下。
 
 * 91 犯第二百八十五條之罪者，得令入相當處所，強制治療。前項處分，於刑之執行前為之，其期間至治癒時為止。
+
+* 91.1 犯第二百二十一條至第二百二十七條、第二百二十八條、第二百二十九條、第二百三十條、第二百三十四條之罪者，於裁判前應經鑑定有無施以治療之必要。有施以治療之必要者，得令入相當處所，施以治療。前項處分於刑之執行前為之，其期間至治癒為止。但最長不得逾三年。前項治療處分之日數，以一日抵有期徒刑或拘役一日或第四十二條第四項裁判所定之罰金額數。
+
+> 釋：觸犯妨害性自主罪經鑑定而顯有治療之必要者，得令入相當處所，為適當之治療，爰增訂本條，使對性犯罪者的強制治療有法源根據。
 
 * 92 第八十六條至第九十條之處分，按其情形，得以保護管束代之。前項保護管束期間，為三年以下，其不能收效者，得隨時撤銷之，仍執行原處分。
 
@@ -380,17 +386,65 @@
 
 * 185 損壞或壅塞陸路、水路、橋樑或其他公眾往來之設備或以他法致生往來之危險者，處五年以下有期徒刑、拘役或五百元以下罰金。因而致人於死者，處無期徒刑或七年以上有期徒刑。致重傷者，處三年以上、十年以下有期徒刑。第一項之未遂犯罰之。
 
+* 185.1 以強暴、脅迫或其他非法方法劫持使用中之航空器或控制其飛航者，處死刑、無期徒刑或七年以上有期徒刑。其情節輕微者，處七年以下有期徒刑。因而致人於死者，處死刑或無期徒刑；致重傷者，處死刑、無期徒刑或十年以上有期徒刑。以第一項之方法劫持使用中供公眾運輸之舟、車或控制其行駛者，處五年以上有期徒刑。其情節輕微者，處三年以下有期徒刑。因而致人於死者，處無期徒刑或十年以上有期徒刑；致重傷者，處七年以上有期徒刑。第一項、第三項之未遂犯罰之。預備犯第一項之罪者，處三年以下有期徒刑。
+
+> 釋：一、本條新增。二、民用航空法雖有空中劫機之處罰規定，唯屬特別法，且僅限於民用航空機，不能適用於一切航空器。爰增設空中劫機之犯罪類型，對於非法劫持使用中之航空器或控制其飛航等行為予以處罰。因此等犯罪情節重大，自應規定較重之刑度，以維護航空之安全。三、劫持使用中供公眾運輸之舟、車或控制其行駛者，亦有處罰之必要。惟其犯罪情節較輕，另設較輕之處罰規定。四、另增訂未遂犯及預備犯之處罰，以遏止此類犯罪。
+
+* 185.2 以強暴、脅迫或其他非法方法危害飛航安全或其設施者，處七年以下有期徒刑、拘役或三十萬元以下罰金。因而致航空器或其他設施毀損者，處三年以上十年以下有期徒刑。因而致人於死者，處死刑、無期徒刑或十年以上有期徒刑；致重傷者，處五年以上十二年以下有期徒刑。第一項之未遂犯罰之。
+
+> 釋：一、本條新增。二、以強暴、脅迫或其他非法方法危害飛航之安全或其設施，可能發生重大危險，特增設此犯罪類型，以維護飛航之安全。三、由於此類犯罪，極易導致乘客之死傷，故增設第三項及第四項，分別規定因而致人於死或重傷之結果加重犯及未遂犯之處罰。
+
+* 185.3 服用毒品、麻醉藥品、酒類或其他相類之物，不能安全駕駛動力交通工具而駕駛者，處一年以下有期徒刑、拘役或三萬元以下罰金。
+
+> 釋：一、本條新增。二、為維護交通安全，增設服用酒類或其他相類之物過量致意識模糊駕駛交通工具之處罰規定，以防止交通事故之發生。
+
+* 185.4 駕駛動力交通工具肇事，致人死傷而逃逸者，處六月以上五年以下有期徒刑。
+
+> 釋：一、為維護交通安全，加強救護，減少被害人之死傷，促使駕駛人於肇事後，能對被害人即時救護，特增設本條，關於肇事致人死傷而逃逸之處罰規定。二、本條之刑度參考第二百九十四條第一項遺棄罪之規定。
+
 * 186 未受允准，而製造、販賣、運輸或持有炸藥、棉花藥、雷汞或其他相類之爆裂物或軍用槍砲、子彈而無正當理由者，處二年以下有期徒刑、拘役或五百元以下罰金。
 
+* 186.1 無正當理由使用炸藥、棉花藥、雷汞或其他相類之爆裂物爆炸，致生公共危險者，處一年以上七年以下有期徒刑。因而致人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上十年以下有期徒刑。因過失致炸藥、棉花藥、雷汞或其他相類之爆裂物爆炸而生公共危險者，處二年以下有期徒刑、拘役或五千元以下罰金。第一項之未遂犯罰之。
+
+> 釋：一、近代科學技術發達，爆炸物之使用，已日益普遍，如被不法利用，對於公共安全，危害甚大。特增設第一項之犯罪類型，以資因應。二、前項犯罪行為，極易造成死傷，爰於第二項增訂因而致人於死或重傷之結果加重犯，並於第三項及第四項分別增訂過失犯與未遂犯之處罰規定，以期遏阻。
+
 * 187 意圖供自己或他人犯罪之用，而製造、販賣、運輸或持有炸藥、棉花藥、雷汞或其他相類之爆裂物或軍用槍砲、子彈者，處五年以下有期徒刑。
+
+* 187.1 不依法令製造、販賣、運輸或持有核子原料、燃料、反應器、放射性物質或其原料者，處五年以下有期徒刑。
+
+> 釋：一、本條新增。二、因科學技術發達，使用核能、放射線之機會日漸增多，如被不法使用，危害公共安全甚鉅。特增設此類犯罪類型，以應需要。
+
+* 187.2 放逸核能、放射線，致生公共危險者，處五年以下有期徒刑。因而致人於死者，處無期徒刑或十年以上有期徒刑；致重傷者，處五年以上有期徒刑。因過失犯第一項之罪者，處二年以下有期徒刑、拘役或五千元以下罰金。第一項之未遂犯罰之。
+
+> 釋：一、本條新增。二、放逸核能、放射線，極易引起傷亡，故明定因而致人於死或重傷結果加重犯之處罰規定。三、本類型之犯罪，危險性極大，爰於第二項及第三項分別增設過失犯及未遂犯之處罰規定。
+
+* 187.3 無正當理由使用放射線，致傷害人之身體或健康者，處三年以上十年以下有期徒刑。因而致人於死者，處無期徒刑或十年以上有期徒刑；致重傷者，處五年以上有期徒刑。第一項之未遂犯罰之。
+
+> 釋：一、本條新增。二、放射線極易傷害人之身體或健康，如被不法利用，危害社會大眾之安全甚鉅。特於第一項增設無正當理由使用放射線致傷害人之身體或健康之處罰規定，以維大眾之安全。另於第二項及第三項分別增訂結果加重犯及未遂犯之處罰規定。
 
 * 188 妨害鐵路、郵務、電報、電話或供公眾之用水、電氣、煤氣事業者，處五年以下有期徒刑、拘役或五百元以下罰金。
 
 * 189 損壞礦坑、工廠或其他相類之場所內關於保護生命之設備，致生危險於他人生命者，處一年以上、七年以下有期徒刑。因而致人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上十年以下有期徒刑。因過失犯第一項之罪者，處六月以下有期徒刑、拘役或三百元以下罰金。從事業務之人，因業務上之過失犯第一項之罪者，處二年以下有期徒刑、拘役或五百元以下罰金。第一項之未遂犯罰之。
 
+* 189.1 損壞礦場、工廠或其他相類之場所內關於保護生命之設備或致令不堪用，致生危險於他人之身體健康者，處一年以下有期徒刑、拘役或三千元以下罰金。損壞前項以外之公共場所內關於保護生命之設備或致令不堪用，致生危險於他人之身體健康者，亦同。
+
+> 釋：一、本條新增。二、損壞礦場、工廠或其他相類之場所及公共場所內關於保護生命之設備或致令不堪用，對於他人之身體健康，有所危害，故增設處罰之規定。惟危害人之身體健康，其情節較危害人之生命為輕，特增設「致生危險於他人之身體或健康」之處罰明文，以資適用。
+
+* 189.2 阻塞戲院、商場、餐廳、旅店或其他公眾得出入之場所或公共場所之逃生通道，致生危險於他人生命、身體或健康者，處三年以下有期徒刑。阻塞集合住宅或共同使用大廈之逃生通道，致生危險於他人生命、身體或健康者，亦同。因而致人於死者，處七年以下有期徒刑；致重傷者，處五年以下有期徒刑。
+
+> 釋：一、本條新增。二、明文規定阻塞公共場所內關於保護生命之設備，致生危險於他人之身體或健康之處罰。
+
 * 190 投放毒物或混入妨害衛生物品於供公眾所飲之水源、水道或自來水池者，處一年以上、七年以下有期徒刑。因而致人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上、十年以下有期徒刑。因過失犯第一項之罪者，處六月以下有期徒刑、拘役或三百元以下罰金。第一項之未遂犯罰之。
 
+* 190.1 投棄、放流、排出或放逸毒物或其他有害健康之物，而污染空氣、土壤、河川或其他水體，致生公共危險者，處五年以下有期徒刑。廠商、事業場所負責人或監督策劃人員，因事業活動而犯前項之罪者，處七年以下有期徒刑。因而致人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上十年以下有期徒刑。因過失犯第一項之罪者，處六月以下有期徒刑、拘役或五千元以下罰金。
+
+> 釋：一、本條新增。二、增設因過失投棄、放流毒物或有害健康之物，污染空氣、土壤、河川等之處罰。另訂怠為業務必要之注意而犯前述之罪之處罰。三、第三項增訂，因而致人於死或重傷之結果加重犯。
+
 * 191 製造、販賣或意圖販賣而陳列妨害衛生之飲食物品或其他物品者，處六月以下有期徒刑、拘役或科或併科一千元以下罰金。
+
+* 191.1 對他人公開陳列、販賣之飲食物品或其他物品滲入、添加或塗抹毒物或其他有害人體健康之物質者，處七年以下有期徒刑。將已滲入、添加或塗抹毒物或其他有害人體健康之飲食物品或其他物品混雜於公開陳列、販賣之飲食物品或其他物品者，亦同。犯前二項之罪而致人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上十年以下有期徒刑。第一項及第二項之未遂犯罰之。
+
+> 釋：一、本條係新增。近來發生不法歹徒仿日本千面人於市面流通食品內下毒以勒索廠商鉅款案件，嚴重破壞社會安寧及危害消費大眾生命安全，亟應加以遏止。對於此種不法行為，雖有刑法第三百四十六條恐嚇取財罪可資適用，惟刑度過輕，難以發揮遏止作用，爰增列處罰專條。二、又，仿日本千面人於食品下毒案件，極易造成死傷等嚴重後果，故增訂因而致人於死或重傷之結果加重犯及未遂犯之處罰規定，以期適用。
 
 * 192 違背關於預防傳染病所公布之檢查或進口之法令者，處二年以下有期徒刑、拘役或一千元以下罰金。暴露有傳染病菌之屍體，或以他法散佈病菌，致生公共危險者亦同。
 
@@ -452,37 +506,89 @@
 
 > 釋：一、紙上或物品上之圖畫或照像，雖非文書，亦復不少，其與公共信用關係密切，爰增訂「圖畫」、「照像」以文書論之規定，以處罰其偽造、變造之行為。二、近代社會對於錄音、錄影、電腦之使用，日趨普遍，並漸用以取代文書之製作，如有偽造、變造行為，有加以處罰之必要，特增列第二項，將「錄音」、「錄影」、「電磁紀錄」亦視為文書之規定，已應實際需要，另參酌日本刑法第七條之二之立法例，增列第三項有關「電磁紀錄」之界定。三、又本條所指文字、符號、圖畫、照像、錄音、錄影或電磁紀錄之使用，在社會上已日趨普遍，其重要性不亞於一般文書。爰參酌本法第一百三十四條之立法例，將本法原規定「關於本章之罪」，修正為「關於本章及本章以外各罪」，以期擴及本法有關文書之規定，以應需要。
 
-* 221 對於婦女以強暴、脅迫、藥劑、催眠術或他法，至使不能抗拒而姦淫之者，為強姦罪，處五年以上有期徒刑。姦淫未滿十四歲之女子，以強姦論。前二項之未遂犯罰之。
+* 221 對於男女以強暴、脅迫、恐嚇、催眠術或其他違反其意願之方法而為性交者，處三年以上十年以下有期徒刑。前項之未遂犯罰之。
 
-* 222 二人以上犯前條第一項或第二項之罪，而共同輪姦者，處無期徒刑或七年以上有期徒刑。
+> 釋：一、原條文中「姦淫」一詞其意為男女私合，或男女不正當之性交行為，不無放蕩淫逸之意涵，對於被害人誠屬難堪，故予修正為「性交」。二、強制性交罪之被害人包括男性，故修改「婦女」為「男女」，以維男女平權之原則。三、原條文中的「致使不能抗拒」，要件過於嚴格，容易造成受侵害者，因為需要「拼命抵抗」而造成生命或身體方面更大的傷害，故修正為「違反其意願之方法」。
 
-* 223 犯強姦罪而故意殺被害人者，處死刑。
+* 222 犯前條之罪而有左列情形之一者，處無期徒刑或七年以上有期徒刑：一、二人以上共同犯之者。二、對十四歲以下之男女犯之者。三、對心神喪失、精神耗弱或身心障礙之人犯之者。四、以藥劑犯之者。五、對被害人施以凌虐者。六、利用駕駛供公眾或不特定人運輸之交通工具之機會犯之者。七、侵入住宅或有人居住之建築物、船艦或隱匿其內犯之者。八、攜帶兇器犯之者。前項之未遂犯罰之。
 
-* 224 對於男女以強暴、脅迫、藥劑、催眠術或他法，至使不能抗拒而為猥褻之行為者，處七年以下有期徒刑。對於未滿十四歲之男女為猥褻之行為者亦同。
+> 釋：一、本條除第一款於原條文中有規定外，其餘各款均係增訂。二、本條所列之各種狀況，均係較普通強姦罪之惡性更重大，有加重處罰之必要，爰仿加重竊盜罪、加重強盜罪，加重搶奪罪之例增訂之。
 
-* 225 對於婦女乘其心神喪失或其他相類之情形，不能抗拒而姦淫之者，處三年以上、十年以下有期徒刑。對於男女乘其心神喪失或其他相類之情形，不能抗拒而為猥褻之行為者，處五年以下有期徒刑。第一項之未遂犯罰之。
+* 223 （刪除）
 
-* 226 犯第二百二十一條、第二百二十四條或第二百二十五條之罪，因而致被害人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處七年以上有期徒刑。因而致被害人羞忿自殺或意圖自殺而致重傷者，處七年以上有期徒刑。
+> 釋：原條文「強姦殺人罪」併入第二百二十六條之一，與強制性交重傷害被害人等之結合犯並列，故刪除。
 
-* 227 姦淫十四歲以上未滿十六歲之女子者，處一年以上、七年以下有期徒刑。對於十四歲以上未滿十六歲之男女為猥褻之行為者，處五年以下有期徒刑。
+* 224 對於男女以強暴、脅迫、恐嚇、催眠術或其他違反其意願之方法，而為猥褻之行為者，處六月以上五年以下有期徒刑。
 
-* 228 對於因親屬、監護、教養、救濟、公務或業務關係服從自己監督之人，利用權勢而姦淫或為猥褻之行為者，處五年以下有期徒刑。
+> 釋：一、原條文中「致使不能抗拒」改為「違反其意願之方法，參考第二百二十一條說明三。二、原條文第二項本質上屬合意猥褻，移至第二百二十七條第二項。
 
-* 229 以詐術使婦女誤信為自己配偶而聽從其姦淫者，處三年以上、十年以下有期徒刑。前項之未遂犯罰之。
+* 224.1 犯前條之罪而有第二百二十二條第一項各款情形之一者，處三年以上十年以下有期徒刑。
 
-* 230 直系或三親等內旁系血親相和姦者，處五年以下有期徒刑。
+> 釋：一、本條新增。二、犯強制猥褻罪而有第二百二十二條第一項各款之情形，均較普通強制猥褻罪惡性更重大，故加重處罰。
 
-* 231 意圖營利，引誘或容留良家婦女與他人姦淫者，處三年以下有期徒刑，得併科五百元以下罰金。意圖營利，使人為猥褻之行為者亦同。以犯前二項之罪為常業者，處五年以下有期徒刑，得併科一千元以下罰金。公務員包庇他人犯前三項之罪者，依各該項之規定，加重其刑至二分之一。
+* 225 對於男女利用其心神喪失、精神耗弱、身心障礙或其他相類之情形，不能或不知抗拒而為性交者，處三年以上十年以下有期徒刑。對於男女利用其心神喪失、精神耗弱、身心障礙或其他相類之情形，不能或不知抗拒而為猥褻之行為者，處六月以上五年以下有期徒刑。第一項之未遂犯罰之。
 
-* 232 對於第二百二十八條所定服從自己監督之人，或夫對於妻，犯前條第一項之罪者，處五年以下有期徒刑，得併科一千元以下罰金。
+> 釋：一、原條文「婦女」修改為「男女」，參考第二百二十一條說明三。二、依身心障礙者保護法所規定之情形，增列「身心障礙」。
 
-* 233 引誘未滿十六歲之男女，與他人為猥褻之行為或姦淫者，處五年以下有期徒刑。
+* 226 犯第二百二十一條、第二百二十二條、第二百二十四條、第二百二十四條之一或第二百二十五條之罪，因而致被害人於死者，處無期徒刑或十年以上有期徒刑；致重傷者，處十年以上有期徒刑。因而致被害人羞忿自殺或意圖自殺而致重傷者，處十年以上有期徒刑。
 
-* 234 公然為猥褻之行為者，處拘役或一百元以下罰金。
+> 釋：一、依現行法輪姦致被害人於死或致重傷者，只論以第二百二十二條之輪姦罪非常不合理，故增列對於「加重強制性交罪」及「加重強制猥褻罪」之加重結果犯之處罰。二、比較第二百二十二條之刑度，將最低本刑七年以上有期徒刑，提高為十年以上有期徒刑，以求刑罰之公平。三、第二項條文加重刑罰。
 
-* 235 散布或販賣猥褻之文字、圖畫或其他物品，或公然陳列，或以他法供人觀覽者，處一年以下有期徒刑、拘役或科或併科三千元以下罰金。意圖散布、販賣而製造、持有前項之文字、圖畫或其他物品者亦同。前二項之文字、圖畫及物品，不問屬於犯人與否沒收之。
+* 226.1 犯第二百二十一條、第二百二十二條、第二百二十四條、第二百二十四條之一或第二百二十五條之罪，而故意殺害被害人者，處死刑或無期徒刑；使被害人受重傷者，處無期徒刑或十年以上有期徒刑。
 
-* 236 第二百二十一條至第二百三十條之罪，須告訴乃論。
+> 釋：一、現行法第二百二十三條「強姦殺人罪」併入本條。二、現行法只對強姦故意殺人者處以死刑規定，然「強制性交罪」、「加重強制性交罪」、「強制猥褻罪」及「加重強制猥褻罪」，雖其犯罪行為狀況不同，但若故意殺被害人，其結果相同，惡性同等重大，故一併規範之。三、強姦而殺被害人，現刑法規定絕對死刑一種，難以依實際犯罪情節，妥當量處，爰修改為相對死刑，得處死刑或無期徒刑。四、強姦或強制猥褻被害人而重傷害被害人者，現行法並無結合犯之處罰，實務上僅能與現行法第二百七十八條第一項從一重處斷，造成情重法輕之現象，爰增設後段規定之，以求刑罰之公平。
+
+* 227 對於未滿十四歲之男女為性交者，處三年以上十年以下有期徒刑。對於未滿十四歲之男女為猥褻之行為者，處六月以上五年以下有期徒刑。對於十四歲以上未滿十六歲之男女為性交者，處七年以下有期徒刑。對於十四歲以上未滿十六歲之男女為猥褻之行為者，處三年以下有期徒刑。第一項、第三項之未遂犯罰之。
+
+> 釋：一、現行法第二百二十一條第二項「準強姦罪」，改列本條第一項；第二百二十四條第二項「準強制猥褻罪」改列本條第二項。二、妨害性自主罪之保護客體及於男性，故將現行法中「女子」改為「男女」。
+
+* 227.1 十八歲以下之人犯前條之罪者，減輕或免除其刑。
+
+> 釋：對年齡相若之年輕男女，因相戀自願發生性行為之情形，若一律以第二百二十七條之刑罰論處，未免過苛，故一律減輕或免除其刑。
+
+* 228 對於因親屬、監護、教養、教育、訓練、救濟、醫療、公務、業務或其他相類關係受自己監督、扶助、照護之人，利用權勢或機會為性交者，處六月以上五年以下有期徒刑。因前項情形而為猥褻之行為者，處三年以下有期徒刑。第一項之未遂犯罰之。
+
+> 釋：增訂因「教育」、「訓練」、「醫療」之關係利用權勢或機會為性交或為猥褻行為之處罰。
+
+* 229 以詐術使男女誤信為自己配偶，而聽從其為性交者，處三年以上十年以下有期徒刑。前項之未遂犯罰之。
+
+> 釋：一、修正原條文「婦女」為「男女」，使男性同為保護之客體。二、修正「姦淫」為「性交」，參考第二百二十一條說明一。
+
+* 229.1 對配偶犯第二百二十一條之罪者，或未滿十八歲之人犯第二百二十七條之罪者，須告訴乃論。
+
+> 釋：一、依現行法第二百二十一條之規定，並不排除婚姻關係中強制性交行為之有責性，然為兼顧夫妻間強制性交之特性，本條訂為告訴乃論，使婚姻問題之處理有轉寰之餘地，維繫家庭之完整。二、增訂未成年人犯第二百二十七條之罪為告訴乃論。
+
+* 230 與直系或三親等內旁系血親為性交者，處五年以下有期徒刑。
+
+> 釋：原條文「相和姦」修正為「為性交」。
+
+* 231 意圖使男女與他人為性交或猥褻之行為，而引誘、容留或媒介以營利者，處五年以下有期徒刑，得併科十萬元以下罰金。以詐術犯之者，亦同。以犯前項之罪為常業者，處一年以上七年以下有期徒刑，得併科三十萬元以下罰金。公務員包庇他人犯前二項之罪者，依各該項之規定加重其刑至二分之一。
+
+> 釋：一、由於妨害風化犯罪樣態多元化，應召站主持人、掮客、保鑣等媒介嫖客與賣淫者於非特定場合為性交或為猥褻之行為，造成色情氾濫，社會風氣敗壞，加上色情行業利潤豐厚，以詐術使人行之者，亦常見，故增列「媒介」及施用「詐術」行為之處罰。二、將婦女分為「良家婦女」與「非良家婦女」有違平等原則，又男妓日益普遍，亦妨害風化，故修改「良家婦女」為「男女」。三、合併現行法第一項與第二項性交與猥褻行為之犯行，以減少本條文之項次。四、加重刑罰，以遏歪風。
+
+* 231.1 意圖營利，以強暴、脅迫、恐嚇、監控、藥劑、催眠術或其他違反本人意願之方法使男女與他人為性交或猥褻之行為者，處七年以上有期徒刑，得併科三十萬元以下罰金。媒介、收受、藏匿前項之人或使之隱避者，處一年以上七年以下有期徒刑。以犯前二項之罪為常業者，處十年以上有期徒刑，得併科五十萬元以下罰金。公務員包庇他人犯前三項之罪者，依各該項之規定加重其刑至二分之一。第一項未遂犯罰之。
+
+> 釋：一、增設意圖營利以強制等手段或以藥劑、催眠術使人無法抵抗而使人為性交或為猥褻行為之處罰，以保人身安全，遏止色情犯濫。二、增列媒介、收受、藏匿、隱避被害人之處罰。三、常業犯、公務員包庇犯行者相對加重刑罰。
+
+* 232 對於第二百二十八條所定受自己監督、扶助、照護之人，或夫對於妻，犯第二百三十一條第一項、第二百三十一條之一第一項、第二項之罪者，依各該條項之規定加重其刑至二分之一。
+
+> 釋：利用其身分、權勢而為第二百二十八條、第二百三十一條第一項、第二百三十一條之一第一、二項之行為者，應該加重其處罰，以收遏阻之效，故加重其刑度。
+
+* 233 意圖使未滿十六歲之男女與他人為性交或猥褻之行為，而引誘、容留或媒介之者，處五年以下有期徒刑、拘役或五千元以下罰金。以詐術犯之者，亦同。意圖營利犯前項之罪者，處一年以上七年以下有期徒刑，得併科五萬元以下罰金。
+
+> 釋：原條文修正為第一項，又容留、媒介行為與引誘行為惡性相當，爰並增列「容留或媒介」未滿十六歲之男女，與他人為性交或猥褻之行為，其惡性較重，且嚴重破壞社會善良風氣，爰增列第二項規定處以較重之刑度，以期遏止。
+
+* 234 意圖供人觀覽，公然為猥褻之行為者，處一年以下有期徒刑、拘役或三千元以下罰金。意圖營利犯前項之罪者，處二年以下有期徒刑、拘役或科或併科一萬元以下罰金。
+
+> 釋：一、第一項之行為加重刑罰。二、對於在公共場所或公眾得出入之場所公然為猥褻行為者，例如脫衣舞之表演，加重處罰，以正風尚。
+
+* 235 散布、播送或販賣猥褻之文字、圖畫、聲音、影像或其他物品，或公然陳列，或以他法供人觀覽、聽聞者，處二年以下有期徒刑、拘役或科或併科三萬元以下罰金。意圖散布、播送、販賣而製造、持有前項文字、圖畫、聲音、影像及其附著物或其他物品者，亦同。前二項之文字、圖畫、聲音或影像之附著物及物品，不問屬於犯人與否，沒收之。
+
+> 釋：目前社會涉及妨害風化之行為，層出不窮，爰於第頸「散布」之下，增訂「播送」二字，並增列「聲者」、「影像」為犯罪客體及將「閱聽」改為「聽聞」，以期周密，並修正罰金額。
+
+* 236 第二百三十條之罪，須告訴乃論。
+
+> 釋：強制性交、強制猥褻等罪須告訴乃論，立法本意良善，但助長加害人逍遙法外，坐實本罪之氾濫，且強化被害人引以為恥之觀念。為破除此種不合時代潮流的父權社會思想，將強制性交等罪改為非告訴乃論，故本條修正為只有第二百三十條需告訴乃論。
 
 * 237 有配偶而重為婚姻或同時與二人以上結婚者，處五年以下有期徒刑；其相婚者亦同。
 
@@ -490,13 +596,19 @@
 
 * 239 有配偶而與人通姦者，處一年以下有期徒刑；其相姦者亦同。
 
-* 240 和誘未滿二十歲之男女脫離家庭或其他有監督權之人者，處三年以下有期徒刑。和誘有配偶之人脫離家庭者，亦同。意圖營利或意圖使被誘人為猥褻之行為或姦淫，而犯前二項之罪者，處六月以上、五年以下有期徒刑，得併科一千元以下罰金。前三項之未遂犯罰之。
+* 240 和誘未滿二十歲之男女，脫離家庭或其他有監督權之人者，處三年以下有期徒刑。和誘有配偶之人脫離家庭者，亦同。意圖營利，或意圖使被誘人為猥褻之行為或性交，而犯前二項之罪者，處六月以上五年以下有期徒刑，得併科一千元以下罰金。前三項之未遂犯罰之。
 
-* 241 略誘未滿二十歲之男女脫離家庭或其他有監督權之人者，處一年以上、七年以下有期徒刑。意圖營利或意圖使被誘人為猥褻之行為或姦淫，而犯前項之罪者，處三年以上、十年以下有期徒刑，得併科一千元以下罰金。和誘未滿十六歲之男女，以略誘論。前三項之未遂犯罰之。
+> 釋：原條文「姦淫」二字改為「性交」，參考第二百二十一條說明一。
+
+* 241 略誘未滿二十歲之男女，脫離家庭或其他有監督權之人者，處一年以上七年以下有期徒刑。意圖營利，或意圖使被誘人為猥褻之行為或性交，而犯前項之罪者，處三年以上十年以下有期徒刑，得併科一千元以下罰金。和誘未滿十六歲之男女，以略誘論。前三項之未遂犯罰之。
+
+> 釋：原條文第二項中「姦淫」修改為「性交」，參考第二百二十一條說明一。
 
 * 242 移送前二條之被誘人出中華民國領域外者，處無期徒刑或七年以上有期徒刑。前項之未遂犯罰之。
 
-* 243 意圖營利，或意圖使第二百四十條或第二百四十一條之被誘人為猥褻之行為或姦淫，而收受、藏匿被誘人或使之隱避者，處六月以上、五年以下有期徒刑，得併科五百元以下罰金。前項之未遂犯罰之。
+* 243 意圖營利、或意圖使第二百四十條或第二百四十一條之被誘人為猥褻之行為或性交，而收受、藏匿被誘人或使之隱避者，處六月以上五年以下有期徒刑，得併科五百元以下罰金。前項之未遂犯罰之。
+
+> 釋：原條文第一項中「姦淫」修改「性交」，參考第二百二十一條說明一。
 
 * 244 犯第二百四十條至第二百四十三條之罪，於裁判宣告前送回被誘人或指明所在地因而尋獲者，得減輕其刑。
 
@@ -604,13 +716,21 @@
 
 * 296 使人為奴隸或使人居於類似奴隸之不自由地位者，處一年以上、七年以下有期徒刑。前項之未遂犯罰之。
 
+* 296.1 買賣、質押人口者，處五年以上有期徒刑，得併科五十萬元以下罰金。意圖使人為性交或猥褻之行為而犯前項之罪者，處七年以上有期徒刑，得併科五十萬元以下罰金。以強暴、脅迫、恐嚇、監控、藥劑、催眠術或其他違反本人意願之方法犯前二項之罪者，加重其刑至二分之一。媒介、收受、藏匿前三項被買賣、質押之人或使之隱避者，處一年以上七年以下有期徒刑，得併科三十萬元以下罰金。以犯前四項之罪為常業者，處無期徒刑或十年以上有期徒刑，併科七十萬元以下罰金。公務員包庇他人犯前五項之罪者，依各該項之規定加重其刑至二分之一。第一項至第三項之未遂犯罰之。
+
+> 釋：一、本條係新增訂。二、人口買賣逼良為娼惡行重大，宜單獨條列處罰。三、色情行業中之人口買賣行為，加重處罰。媒介、收受、藏匿、隱避被害人者併同處罰。四、以強暴脅迫等方式為人口買賣或強制性交或猥褻及公務員包庇者加重其刑。五、第一至三項買賣、質押人口之未遂犯罰之。
+
 * 297 意圖營利，以詐術使人出中華民國領域外者，處三年以上、十年以下有期徒刑，得併科三千元以下罰金。以犯前項之罪為常業者，處五年以上有期徒刑，得併科五千元以下罰金。第一項之未遂犯罰之。
 
-* 298 意圖使婦女與自己或他人結婚而略誘之者，處五年以下有期徒刑。意圖營利，或意圖使婦女為猥褻之行為或姦淫，而略誘之者，處一年以上、七年以下有期徒刑，得併科一千元以下罰金。前二項之未遂犯罰之。
+* 298 意圖使婦女與自己或他人結婚而略誘之者，處五年以下有期徒刑。意圖營利、或意圖使婦女為猥褻之行為或性交而略誘之者，處一年以上七年以下有期徒刑，得併科一千元以下罰金。前二項之未遂犯罰之。
+
+> 釋：原條文第二項中「姦淫」改為「性交」，參考第二百二十一條說明一。
 
 * 299 移送前條被略誘人出中華民國領域外者，處五年以上有期徒刑。前項之未遂犯罰之。
 
-* 300 意圖營利，或意圖使被略誘人為猥褻之行為或姦淫，而收受、藏匿被略誘人或使之隱避者，處六月以上、五年以下有期徒刑，得併科五百元以下罰金。前項之未遂犯罰之。
+* 300 意圖營利，或意圖使被略誘人為猥褻之行為或性交，而收受、藏匿被略誘人或使之隱避者，處六月以上五年以下有期徒刑，得併科五百元以下罰金。前項之未遂犯罰之。
+
+> 釋：原條文第一項中「姦淫」修改為「性交」，參考第二百二十一條說明一。
 
 * 301 犯第二百九十八條至第三百條之罪，於裁判宣告前，送回被誘人或指明所在地因而尋獲者，得減輕其刑。
 
@@ -644,6 +764,18 @@
 
 > 釋：一、增列圖畫為保護客體，並簡化原規定之文字及修正罰金額。二、增設「無故以開拆以外之方法窺視其內容」之處罰規定，並緊接於原條文之下，列為原條文後段，以應實際需要，並得規範以電子科學儀器窺視文書情形。
 
+* 315.1 有左列行為之一者，處三年以下有期徒刑、拘役或三萬元以下罰金：一、無故利用工具或設備窺視、竊聽他人非公開之活動、言論或談話者二、無故以錄音、照相、錄影或電磁紀錄竊錄他人非公開之活動、言論或談話者。
+
+> 釋：一、本條新增。二、目前社會使用照相、錄音、錄影、望遠鏡及各種電子、光學設備者，已甚普遍。惟以之為工具，用以窺視、竊聽、竊錄他人隱私活動、言論或談話者，已危害社會善良風氣及個人隱私，實有處罰之必要，爰增列本條，明文處罰之。至未透過工具之窺視或竊聽，則依社會秩序維護法之規定，以秩序罰處罰之。
+
+* 315.2 意圖營利供給場所、工具或設備，便利他人為前條之行為者，處五年以下有期徒刑、拘役或科或併科五萬元以下罰金。意圖散布、播送、販賣而有前條項第二款之行為者，亦同。明知為前二項或前條第二款竊錄之內容而製造、散布，播送或販賣者，依第一項之規定處斷。前三項之未遂犯罰之。
+
+> 釋：一、本條新增。二、意圖營利供給場所、工具或設備便利他人窺視、竊聽、竊錄，或意圖散布、播送、販賣而犯前條第一項第二款之罪及明知為竊錄之內容而製造、散布、播送或販賣者，其惡性尤為嚴重。爰提高該等犯罪處罰之刑度，以為處罰。
+
+* 315.3 前二條竊錄內容之附著物及物品，不問屬於犯人與否，沒收之。
+
+> 釋：一、本條新增。二、竊錄內容之附著物及物品，對於被害人之隱私既有妨害，不問屬於犯人與否，應予以沒收，以免此種侵害持續存在，爰於本條設義務沒收之規定。
+
 * 316 醫師、藥師、藥商、助產士、宗教師、律師、辯護人、公證人、會計師或其業務上佐理人或曾任此等職務之人，無故洩漏因業務知悉或持有之他人秘密者，處一年以下有期徒刑、拘役或五百元以下罰金。
 
 * 317 依法令或契約有守因業務知悉或持有工商秘密之義務而無故洩漏之者，處一年以下有期徒刑、拘役或一千元以下罰金。
@@ -658,7 +790,9 @@
 
 > 釋：就職務上或業務上有守秘密義務之人，如利用電腦或其相關設備為洩漏行為，由於洩露範圍因電腦的大量儲存功能，所造成之損害亦較傳統犯罪為大，有加重其處罰之必要，故增列本條規定。
 
-* 319 本章之罪，須告訴乃論。
+* 319 第三百十五條、第三百十五條之一及第三百十六條至第三百十八條之二之罪，須告訴乃論。
+
+> 釋：第三百十五之二之罪除侵害個人法益外，並影響社會生活之安寧，故列為非告訴乃論之罪，本章其餘之罪仍須告訴乃論。
 
 * 320 意圖為自己或第三人不法之所有，而竊取他人之動產者，為竊盜罪，處五年以下有期徒刑、拘役或五百元以下罰金。意圖為自己或第三人不法之利益，而竊佔他人之不動產者，依前項之規定處斷。前二項之未遂犯罰之。
 
@@ -686,11 +820,15 @@
 
 * 331 以犯強盜罪為常業者，處七年以上有期徒刑。
 
-* 332 犯強盜罪而有左列行為之一者，處死刑或無期徒刑：一、放火者。二、強姦者。三、擄人勒贖者。四、故意殺人者。
+* 332 犯強盜罪而有左列行為之一者，處死刑或無期徒刑：一、放火者。二、強制性交者。三、擄人勒贖者。四、故意殺人者。
+
+> 釋：原條文第二款「強姦」修改為「強制性交」。
 
 * 333 未受交戰國之允准或不屬於各國之海軍，而駕駛船艦，意圖施強暴、脅迫於他船或他船之人或物者，為海盜罪，處死刑、無期徒刑或七年以上有期徒刑。船員或乘客意圖掠奪財物，施強暴、脅迫於其他船員或乘客，而駕駛或指揮船艦者，以海盜論。因而致人於死者，處死刑；致重傷者，處死刑或無期徒刑。
 
-* 334 犯海盜罪而有左列行為之一者，處死刑：一、放火者。二、強姦者。三、擄人勒贖者。四、故意殺人者。
+* 334 犯海盜罪而有左列行為之一者，處死刑：一、放火者。二、強制性交者。三、擄人勒贖者。四、故意殺人者。
+
+> 釋：原條文第二款「強姦」修改為「強制性交」。
 
 * 335 意圖為自己或第三人不法之所有，而侵占自己持有他人之物者，處五年以下有期徒刑、拘役或科或併科一千元以下罰金。前項之未遂犯罰之。
 
@@ -734,7 +872,9 @@
 
 * 347 意圖勒贖而擄人者，處死刑、無期徒刑或七年以上有期徒刑。因而致人於死或重傷者，處死刑或無期徒刑。第一項之未遂犯罰之。預備犯第一項之罪者，處二年以下有期徒刑。犯第一項之罪，未經取贖而釋放被害人者，得減輕其刑。
 
-* 348 犯前條第一項之罪而故意殺被害人者，處死刑。犯前條第一項之罪而強姦被害人者，處死刑或無期徒刑。
+* 348 犯前條第一項之罪而故意殺被害人者，處死刑。犯前條第一項之罪而對被害人強制性交者，處死刑或無期徒刑。
+
+> 釋：原條文第二項「強姦」修改為「強制性交」。
 
 * 349 收受贓物者，處三年以下有期徒刑、拘役或五百元以下罰金。搬運、寄藏、故買贓物或為牙保者，處五年以下有期徒刑、拘役或科或併科一千元以下罰金。因贓物變得之財物，以贓物論。
 
