刑事訴訟法 2000.1.15

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -86,7 +86,9 @@
 
 * 37 自訴人得委任代理人到場。但法院認為必要時，得命本人到場。
 
-* 38 第二十八條至第三十條、第三十二條及第三十三條之規定，於被告或自訴人之代理人準用之。但被告之代理人於偵查中，對於卷宗及證物不得檢閱、抄錄或攝影。
+* 38 第二十八條至第三十條、第三十二條及第三十三條之規定，於被告或自訴人之代理人準用之。
+
+> 釋：因民國七十一年修正時已准許偵查中選任訴訟代理人，爰將本條但書規定刪除。
 
 * 39 文書由公務員制作者，應記載制作之年、月、日及其所屬機關，由制作人簽名。
 
@@ -320,9 +322,17 @@
 
 > 釋：一、本條新增。二、具保、責付或限制住居，均為停止羈押執行之方法，第一百十條第二項至第四項之規定，於法院依第一百十五條、第一百十六條命責付或限制住居而停止羈押時，宜予準用，爰增訂本條明定之。
 
-* 117 停止羈押後，有左列情形之一者，得命再執行羈押：一、經合法傳喚無正當之理由不到場者。二、受住居之限制而違背者。三、本案新發生第一百零一條各款所定情形之一者。偵查中有前項情形之一者，由檢察官聲請法院行之。再執行羈押之期間，應與停止羈押前已經過之羈押期間合併計算。法院依第一項之規定命再執行羈押時，準用第一百零三條第一項之規定。
+* 116.2 法院許可停止羈押時，得命被告應遵守下列事項：一、定期向法院或檢察官報到。二、不得對被害人、證人、鑑定人、辦理本案偵查、審判之公務員或其配偶、直系血親、三親等內之旁系血親、二親等內之姻親、家長、家屬之身體或財產實施危害或恐嚇之行為。三、因第一百十四條第三款之情形停止羈押者，除維持日常生活及職業所必需者外，未經法院或檢察官許可，不得從事與治療目的顯然無關之活動。四、其他經法院認為適當之事項。
 
-> 釋：一、所謂停止羈押後之「再執行羈押」，是本案原羈押原因存續中，因認為無羈押之必要故以具保等停止羈押之後，因再發生有關本案羈押必要之情事，判斷之結果，認為又有羈押被告之必要時，命再執行羈押。故與他案之另行聲請羈押，或本案撤銷羈押後之重新聲請羈押之情形不同。因此，於本條第一項第三款中列進「本案」二字，以與他案之另行依第一百零一條之一規定另行聲請及決定羈押之情形區別。二、本案再執行羈押之期間，固應與停止羈押前已經過之期間一併計算，而非重行起算，增訂本條第三項。三、規定命再執行羈押之指揮執行的依據，準用第一百零三條第一項之規定，故增訂本條第四項。
+> 釋：一、本條新增。二、因具保、責付、限制住居而停止羈押之被告，其羈押原因仍然存在，僅因無羈押必要或不適宜羈押，而准其保釋在外，但其保釋期間之行為仍應受到一定限制，以符合以具保、責付、限制住居替代羈押之目的，故應許法官於准許停止羈押時，斟酌個案之具體情形，命被告應遵守報到、不得實施危害或恐嚇行為及保外就醫者，未經許可，不得從事與治療目的顯然無關之活動等事項。三、又慮及個案具體情形不同，基於同前強化強制處分約束力之立法意旨，乃增訂一概括規定，於法院認為適當時，亦可命被告遵守一定之事項。
+
+* 117 停止羈押後有下列情形之一者，得命再執行羈押：一、經合法傳喚無正當之理由不到場者。二、受住居之限制而違背者。三、本案新發生第一百零一條第一項、第一百零一條之一第一項各款所定情形之一者。四、違背法院依前條所定應遵守之事項者。五、所犯為死刑、無期徒刑或最輕本刑為五年以上有期徒刑之罪，被告因第一百十四條第三款之情形停止羈押後，其停止羈押之原因已消滅，而仍有羈押之必要者。偵查中有前項情形之一者，由檢察官聲請法院行之。再執行羈押之期間，應與停止羈押前已經過之期間合併計算。法院依第一項之規定命再執行羈押時，準用第一百零三條第一項之規定。
+
+> 釋：一、配合第一百十六條之二之增訂，修正第一項第三款，並增訂第四款，以賦予違反該條所定應遵守事項之法律效果。二、所犯為死刑、無期徒刑或最輕本刑為五年以上有期徒刑之重罪者，僅因第一百十四條第三款之情形停止羈押者，於停止羈押原因消滅後，如任令仍能保釋在外，不無違反原停止羈押之目的，爰增列第一項第五款。
+
+* 117.1 前二條之規定，於檢察官依第九十三條第三項但書或第二百二十八條第三項逕命具保、責付、限制住居，或法院依第一百零一條之二逕命具保、責付、限制住居之情形，準用之。法院依前項規定羈押被告時，適用第一百零一條、第一百零一條之一之規定。檢察官聲請法院羈押被告時，適用第九十三條第二項之規定。因第一項之規定執行羈押者，免除具保之責任。
+
+> 釋：一、本條增訂。二、第一百十六條之二、第一百十七條均係針對停止羈押之情形而規定，為強化羈押前逕命被告具保、責付、限制住居之約束力，仍宜比照停止羈押之規定，賦予檢察官及法院有命被告遵守一定事項之權限，並於被告違背該事項時，得成為撤銷原具保等處分改命羈押之事由，爰增列第一項。三、有再命羈押之原因及必要時，因性質上與再執行羈押不同，係一新的羈押決定，爰於第二項前段明定，以與前條規定區別。又檢察官依第一項聲請法院羈押被告時，仍應適用第九十三條第二項關於「逮捕前置」及「二十四小時羈押留置期間限制」之規定，以確保被告權益，增列第二項後段。四、第一百十九條所定免除具保之責任，僅適用於撤銷羈押、再執行羈押、受不起訴處分或因裁判而致羈押之效力消滅者，並未及於本條情形，爰於第三項明定具保責任之免除。
 
 * 118 具保之被告逃匿者，應命具保人繳納指定之保證金額，並沒入之。不繳納者，強制執行。保證金已繳納者，沒入之。前項規定，於檢察官依第九十三條第三項但書及第二百二十八條第三項命具保者，準用之。
 
@@ -782,17 +792,23 @@
 
 * 322 告訴或請求乃論之罪，已不得為告訴或請求者，不得再行自訴。
 
-* 323 同一案件經檢察官終結偵查者，不得再行自訴。在偵查終結前檢察官知有自訴者，應即停止偵查，將案件移送法院，但遇有急迫情形，檢察官仍應為必要之處分。
+* 323 同一案件經檢察官依第二百二十八條規定開始偵查者，不得再行自訴。但告訴乃論之罪，經犯罪之直接被害人提起自訴者，不在此限。於開始偵查後，檢察官知有自訴在先或前項但書之情形者，應即停止偵查，將案件移送法院。但遇有急迫情形，檢察官仍應為必要之處分。
+
+> 釋：一、為避免利用自訴程序干擾檢察官之偵查犯罪，或利用告訴，再改提自訴，以恫嚇被告，同一案件既經檢察官依法開始偵查，告訴人或被害人之權益當可獲保障，爰修正第一項檢察官「依第二百二十八條規定開始偵查」，並增列但書，明定告訴乃論之罪之除外規定。二、配合第一項但書，修正第二項。
 
 * 324 同一案件經提起自訴者，不得再行告訴或為第二百四十三條之請求。
 
 * 325 告訴或請求乃論之罪，自訴人於第一審辯論終結前，得撤回其自訴。撤回自訴，應以書狀為之。但於審判期日或受訊問時，得以言詞為之。書記官應速將撤回自訴之事由，通知被告。撤回自訴之人，不得再行自訴或告訴或請求。
 
-* 326 法院或受命推事，得於第一次審判期日前，訊問自訴人、被告及蒐集或調查證據，於發見案係民事或利用自訴程序恫嚇被告者，得曉諭自訴人撤回自訴。前項訊問不公開之，非有必要，不得先行傳訊被告。第一項訊問及調查結果，如認為案件有第二百五十二條至第二百五十四條之情形者，得以裁定駁回自訴，並準用第二百五十三條第二項、第三項之規定。駁回自訴之裁定已確定者，非有第二百六十條各款情形之一，不得對於同一案件再行自訴。
+* 326 法院或受命法官，得於第一次審判期日前，訊問自訴人、被告及蒐集或調查證據，於發見案件係民事或利用自訴程序恫嚇被告者，得曉諭自訴人撤回自訴。前項訊問不公開之；非有必要，不得先行傳訊被告。第一項訊問及調查結果，如認為案件有第二百五十二條至第二百五十四條之情形者，得以裁定駁回自訴，並準用第二百五十三條第二項至第四項之規定。駁回自訴之裁定已確定者，非有第二百六十條各款情形之一，不得對於同一案件再行自訴。
+
+> 釋：一、配合法院組織法之修正，將「推事」修改為法官。二、自訴改採律師代理制度後，自訴案件之品質將會提高，利用自訴恫嚇被告或民事案件，亦會減少，且實務上，法院能曉諭律師撤回自訴之情形不多，何況曉諭撤回結果，如果被告將來反而告訴自訴人誣告時，自訴人可能責怪法院最初曉諭其撤回，是第一項後段，無保留之必要。三、本法第二百五十三條第四項關於慰撫金得為民事強制執行名義之規定，於裁定駁回自訴之情形，允宜準用，俾資周妥，爰修正第三項後段。
 
 * 327 命自訴人到場，應傳喚之。自訴人經合法傳喚，無正當之理由不到場者，得拘提之。第七十一條至第七十三條，第七十七條至第八十三條及第八十九條至第九十一條之規定，於自訴人之傳喚及拘提準用之。
 
-* 328 法院於接受自訴狀後，應速將其繕本送達於被告。但認為有先行傳喚或拘提之必要者，得於訊問時交付之。
+* 328 法院於接受自訴狀後，應速將其繕本送達於被告。
+
+> 釋：為使被告於期日前先行作防禦之準備，法院於接受自訴狀後，自應速將繕本送達於被告，俾其得悉被訴內容，爰將但書刪除。
 
 * 329 檢察官於審判期日所得為之訴訟行為，於自訴程序，由自訴人為之。
 
@@ -812,7 +828,9 @@
 
 * 337 第三百十四條第一項之規定，於自訴人準用之。
 
-* 338 提起自訴之被害人犯罪，而被告為其被害人者，被告得於第一審辯論終結前，提起反訴。
+* 338 提起自訴之被害人犯罪，與自訴事實直接相關，而被告為其被害人者，被告得於第一審辯論終結前，提起反訴。
+
+> 釋：明定提起反訴應以「與自訴事實直接相關」為限，以防濫訴。
 
 * 339 反訴，準用自訴之規定。
 
@@ -1026,9 +1044,13 @@
 
 * 440 為受判決人之利益聲請再審之案件，諭知無罪之判決者，應將該判決書刊登公報或其他報紙。
 
-* 441 判決確定後，發見該案件之審判係違背法令者，最高法院之檢察長得向最高法院提起非常上訴。
+* 441 判決確定後，發見該案件之審判係違背法令者，最高法院檢察署檢察總長得向最高法院提起非常上訴。
 
-* 442 檢察官發見有前條情形者，應具意見書將該案卷宗及證物送交最高法院之檢察長，聲請提起非常上訴。
+> 釋：配合法院組織法用語，將「最高法院之檢察長」修正為「最高法院檢察署檢察總長」。
+
+* 442 檢察官發見有前條情形者，應具意見書將該案卷宗及證物送交最高法院檢察署檢察總長，提起非常上訴。
+
+> 釋：配合法院組織法用語，「最高法院之檢察長」修正為「最高法院檢察署檢察總長」。
 
 * 443 提起非常上訴，應以非常上訴書敘述理由，提出於最高法院為之。
 
