強制執行法 2000.1.15

--- a/司法-民事/強制執行法.md
+++ b/司法-民事/強制執行法.md
@@ -26,7 +26,9 @@
 
 * 9 開始強制執行前，除因調查關於強制執行之法定要件或執行之標的物認為必要者外，無庸傳訊當事人。
 
-* 10 實施強制執行時，經債權人同意者，執行法院得延緩執行。前項延緩執行之期限不得逾三個月。債權人聲請續行執行而再同意延緩執行者，以二次為限。每次延緩期間屆滿後，債權人經執行法院通知而不於十日內聲請續行執行者，視為撤回其強制執行之聲請。實施強制執行時，如有特別情事繼續執行顯非適當者，執行法院得變更或延展執行期日。
+* 10 實施強制執行時，經債權人同意者，執行法院得延緩執行。前項延緩執行之期限不得逾三個月。債權人聲請續行執行而再同意延緩執行者，以一次為限。每次延緩期間屆滿後，債權人經執行法院通知而不於十日內聲請續行執行者，視為撤回其強制執行之聲請。實施強制執行時，如有特別情事繼續執行顯非適當者，執行法院得變更或延展執行期日。
+
+> 釋：為防杜當事人以延緩執行拖延執行程序，對於延緩執行之次數，宜加限制，故將現行條文第二項之「二次」，修正為「一次」，以免事件因延緩而久懸。
 
 * 11 供強制執行之財產權，其取得、設定、喪失或變更，依法應登記者，為強制執行時，執行法院應即通知該管登記機關登記其事由。前項通知，執行法院得依債權人之聲請，交債權人逕行持送登記機關登記。債務人因繼承、強制執行、徵收或法院之判決，於登記前已取得不動產物權者，執行法院得因債權人之聲請，以債務人費用，通知登記機關登記為債務人所有後而為執行。前項規定，於第五條第三項之續行強制執行而有辦理繼承登記之必要者，準用之。但不影響繼承人拋棄繼承或限定繼承之權利。
 
@@ -48,7 +50,9 @@
 
 * 19 執行法院對於強制執行事件，認有調查之必要時，得命債權人查報，或依職權調查之。執行法院得向稅捐及其他有關機關、團體或知悉債務人財產之人調查債務人財產狀況，受調查者不得拒絕。但受調查者為個人時，如有正當理由，不在此限。
 
-* 20 已發見之債務人財產不足抵償聲請強制執行之債權或不能發現債務人應交付之財產時，執行法院得因債權人之聲請，定期間命債務人據實報告該期間屆滿前一年內應供強制執行之財產狀況。
+* 20 已發見之債務人財產不足抵償聲請強制執行債權或不能發現債務人應交付之財產時，執行法院得依職權或依聲請，定期間命債務人據實報告該期間屆滿前一年內應供強制執行之財產狀況。
+
+> 釋：配合本法第十九條第一項既許執行法院得依職權調查債務人財產狀況，予以修正。
 
 * 21 債務人受合法通知，無正當理由而不到場者，執行法院得拘提之。
 
@@ -72,11 +76,15 @@
 
 * 24 管收期限不得逾三個月。有管收新原因發生時，對於債務人仍得再行管收，但以一次為限。
 
-* 25 債務人履行債務之義務，不因債務人或依本法得管收之人被管收而免除。關於債務人拘提、管收及應負義務之規定，於左列各款之人亦適用之：一、債務人為無行為能力人或限制行為能力人者，其法定代理人。二、債務人失蹤者，其財產管理人。三、債務人死亡者，其繼承人、遺產管理人、遺囑執行人或特別代理人。四、法人或非法人團體之負責人、獨資商號之經理人。前項各款之人，於喪失資格或解任前，具有報告之義務或拘提、管收之原因者，在喪失資格或解任後，於執行必要範圍內，仍得命其報告或拘提、管收之。
+* 25 債務人履行債務之義務，不因債務人或依本法得管收之人被管收而免除。關於債務人拘提、管收、限制住居及應負義務之規定，於左列各款之人亦適用之：一、債務人為無行為能力人或限制行為能力人者，其法定代理人。二、債務人失蹤者，其財產管理人。三、債務人死亡者，其繼承人、遺產管理人、遺囑執行人或特別代理人。四、法人或非法人團體之負責人、獨資商號之經理人。前項各款之人，於喪失資格或解任前，具有報告之義務或拘提、管收、限制住居之原因者，在喪失資格或解任後，於執行必要範圍內，仍得命其報告或予拘提、管收、限制住居。
+
+> 釋：為保障債權人私權之實現，強制債務人履行債務，執行法院除能對債務人拘提管收外，亦得予限制住居，現行條文將「限制住居」之規定漏列，爰於第二項及第三項之「拘提、管收」後增訂「限制住居」，並於第三項句末「或」後增列「予」，刪除「之」字，以期周全。
 
 * 26 管收所之設置及管理，以法律定之。
 
-* 27 債務人無財產可供強制執行，或雖有財產經強制執行後所得之數額仍不足清償債務時，執行法院應於二個月內續行調查，經調查確無財產或命債權人查報而到期不為報告者，應發給憑證，交債權人收執，載明俟發見有財產時，再予強制執行。
+* 27 債務人無財產可供強制執行，或雖有財產經強制執行後所得之數額仍不足清償債務時，執行法院應命債權人於一個月內查報債務人財產。債權人到期不為報告或查報無財產者，應發給憑證，交債權人收執，載明俟發見有財產時，再予強制執行。債權人聲請執行，而陳明債務人現無財產可供執行者，執行法院得逕行發給憑證。
+
+> 釋：一、執行法院對於強制執行事件，認有調查之必要，得依本法第十九條第一項規定，命債權人查報債務人財產，為落實債權人之查報義務，並減輕執行法院之負擔，爰將原條文修改為執行法院應命債權人查報債務人財產並將期間縮短為一個月，以資因應。二、實務上常有債權人僅為中斷請求權時效，而聲請執行，則於其陳明債務人現行無財產可供執行時，執行法院自得逕行發給憑證，以利結案，爰增設第二項規定。
 
 * 28 強制執行之費用，以必要部分為限，由債務人負擔，並應與強制執行之債權同時收取。前項費用，執行法院得命債權人代為預納。
 
@@ -204,7 +212,9 @@
 
 * 77 查封時，書記官應作成查封筆錄，載明左列事項：一、為查封原因之權利。二、不動產之所在地、種類、實際狀況、使用情形及其他應記明之事項。三、債權人及債務人。四、查封方法及其實施之年、月、日、時。五、查封之不動產有保管人者，其保管人。查封人員及保管人應於前項筆錄簽名，如有依第四十八條第二項規定之人員到場者，亦應簽名。
 
-* 77.1 執行法官或書記官，為調查不動產之實際狀況、占有使用情形或其他權利關係，得訊問債務人或占有之第三人，並得命其提出有關文書。前項情形，債務人無正當理由拒絕陳述或提出文書，或為虛偽陳述或提出虛偽之文書者，準用第二十二條之規定。第三人有前項情形或拒絕到場者，執行法院得以裁定處新臺幣一萬五千元以下之罰鍰。前項裁定得為抗告，抗告中應停止執行。
+* 77.1 執行法官或書記官，為調查不動產之實際狀況、占有使用情形或其他權利關係，得開啟門鎖進入不動產或訊問債務人或占有之第三人，並得命其提出有關文書。前項情形，債務人無正當理由拒絕陳述或提出文書，或為虛偽陳述或提出虛偽之文書者，準用第二十二條之規定。第三人有前項情形或拒絕到場者，執行法院得以裁定處新臺幣一萬五千元以下之罰鍰。前項裁定得為抗告，抗告中應停止執行。
+
+> 釋：為使執行法官或書記官徹底踐行不動產之現況調查權，提高不動產拍賣之競標人之購買意願，宜參考日本民事執行法第五十七條第三項規定，將現行條文第一項之「得訊問債務人或占有之第三人」修正為「得開啟門鎖進入不動產或訊問債務人或占有之第三人」，以資因應。
 
 * 78 已查封之不動產，以債務人為保管人者，債務人仍得為從來之管理或使用。由債務人以外之人保管者，執行法院得許債務人於必要範圍內管理或使用之。
 
@@ -212,7 +222,9 @@
 
 * 80 拍賣不動產，執行法院應命鑑定人就該不動產估定價格，經核定後，為拍賣最低價額。
 
-* 80.1 不動產之拍賣最低價額不足清償優先債權及強制執行之費用者，執行法院應將其事由通知債權人。債權人於受通知後七日內，得證明該不動產賣得價金有賸餘可能或指定超過該項債權及費用總額之拍賣最低價額，並聲明如未拍定願負擔其費用而聲請拍賣。逾期未聲請者，執行法院應撤銷查封，將不動產返還債務人。依債權人前項之聲請為拍賣而未拍定，債權人亦不承受時，執行法院應公告願買受該不動產者，得於六個月內依原定拍賣條件為應買之表示，執行法院於訊問債權人及債務人意見後，許其應買；債權人復願承受者亦同。逾期無人應買或承受者，執行法院應撤銷查封，將不動產返還債務人。不動產由順位在先之扺押權人或其他優先受償權人聲請拍賣者，不適用前二項之規定。第一項第二項關於撤銷查封將不動產返還債務人之規定，於該不動產已併付強制管理之情形；或債權人已聲請另付強制管理而執行法院認為有實益者，不適用之。
+* 80.1 不動產之拍賣最低價額不足清償優先債權及強制執行之費用者，執行法院應將其事由通知債權人。債權人於受通知後七日內，得證明該不動產賣得價金有賸餘可能或指定超過該項債權及費用總額之拍賣最低價額，並聲明如未拍定願負擔其費用而聲請拍賣。逾期未聲請者，執行法院應撤銷查封，將不動產返還債務人。依債權人前項之聲請為拍賣而未拍定，債權人亦不承受時，執行法院應公告願買受該不動產者，得於三個月內依原定拍賣條件為應買之表示，執行法院於訊問債權人及債務人意見後，許其應買；債權人復願承受者亦同。逾期無人應買或承受者，執行法院應撤銷查封，將不動產返還債務人。不動產由順位在先之抵押權或其他優先受償權人聲請拍賣者，不適用前二項之規定。第一項、第二項關於撤銷查封將不動產返還債務人之規定，於該不動產已併付強制管理之情形；或債權人已聲請另付強制管理而執行法院認為有實益者，不適用之。
+
+> 釋：不動產之拍賣最低價額不足清償優先債權及強制執行費用，執行法院依債權人之聲請為拍賣而未拍定，債權人亦不為承受時，執行法院應依原拍賣條件，為特別拍賣之公告，惟現行法公告之期間六個月殊嫌過長，效果不彰，爰將第二項「六個月」縮短為「三個月」，以免案件延滯不決。
 
 * 81 拍賣不動產，應由執行法院先期公告。前項公告，應載明左列事項：一、不動產之所在地、種類、實際狀況、占有使用情形及其應記明之事項。二、拍賣之原因、日期及場所。如以投標方法拍賣者，其開標之日時及場所，定有保證金額者，其金額。三、拍賣最低價額。四、交付價金之期限。五、閱覽查封筆錄之處所及日、時。六、定有應買資格或條件者，其資格或條件。七、拍賣後不點交者，其原因。八、定有應買人察看拍賣物之日、時者，其日、時。
 
@@ -242,7 +254,9 @@
 
 * 94 債權人有二人以上願承受者，以抽籤定之。承受不動產之債權人，其應繳之價金超過其應受分配額者，執行法院應限期命其補繳差額後，發給權利移轉證書；逾期不繳者，再行拍賣。但有未中籤之債權人仍願按原定拍賣條件依法承受者，不在此限。第六十八條之二之規定，於前項再行拍賣準用之。
 
-* 95 經二次減價拍賣而未拍定之不動產，債權人不願承受或依法不得承受時，應命強制管理；在管理中，得依債權人或債務人聲請，再減價或另估價拍賣。但強制管理顯有困難或無實益時，得逕行減價或另估價拍賣。前項拍賣，適用第九十一條至前條之規定。第一項再減價或另估價拍賣，仍未拍定，債權人亦不願承受時，執行法院應公告願買受該不動產者，得於六個月內依原定拍賣條件為應買之表示，執行法院得於詢問債權人及債務人意見後，許其買受。債權人復願為承受者亦同。前項情形，債權人亦得於六個月內聲請另行估價拍賣，如仍未拍定或由債權人承受，或債權人未於六個月內聲請另行估價拍賣者，視為撤回該不動產之執行。第九十四條第二項、第三項之規定，於本條第三項承買準用之。
+* 95 經二次減價拍賣而未拍定之不動產，債權人不願承受或依法不得承受時，執行法院應於第二次減價拍賣期日終結後十日內公告願買受該不動產者，得於公告之日起三個月內依原定拍賣條件為應買之表示，執行法院得於詢問債權人及債務人意見後，許其買受。債權人復願為承受者，亦同。前項三個月期限內，無人應買前，債權人亦得聲請停止前項拍賣，而另行估價或減價拍賣，如仍未拍定或由債權人承受，或債權人未於該期限內聲請另行估價或減價拍賣者，視為撤回該不動產之執行。第九十四條第二項、第三項之規定，於本條第一項承買準用之。
+
+> 釋：一、經二次減價拍賣而未拍定之不動產，債權人不願承受或依法不得承受時，依現行法規定應命強制管理，惟依本法第七十五條第二項規定，不動產之拍賣及強制管理，於性質上許可並認為適當時，原得併行之，且經減價拍賣後付強制管理，及再減價拍賣或另行估價拍賣，除延宕結案時間外，並無實益，爰將第一項有關強制管理及再減價拍賣或另估價拍賣之規定刪除，以為兼顧債權人之權益，原條文第四項債權人得聲請減價拍賣之期間為六個月殊嫌過長，效果不彰，爰縮短為「三個月」，以免案件延滯不決，影響當事人權益，移列為第二項。二、原第五項移列為第三項，並將「於本條第三項承買準用之」，配合修正為「於本條第一項承買準用之」。
 
 * 96 供拍賣之數宗不動產，其中一宗或數宗之賣得價金，已足清償強制執行之債權額及債務人應負擔之費用時，其他部分應停止拍賣。前項情形，債務人得指定其應拍賣不動產之部分。但建築物及其基地，不得指定單獨拍賣。
 
@@ -292,7 +306,9 @@
 
 * 115 就債務人對於第三人之金錢債權為執行時，執行法院應發扣押命令禁止債務人收取或為其他處分，並禁止第三人向債務人清償。前項情形，執行法院得詢問債權人意見，以命令許債權人收取，或將該債權移轉於債權人。如認為適當時，得命第三人向執行法院支付轉給債權人。金錢債權因附條件、期限、對待給付或其他事由，致難依前項之規定辦理者，執行法院得依聲請，準用對於動產執行之規定拍賣或變賣之。金錢債權附有已登記之擔保物權者，執行法院依前三項為強制執行時，應即通知該管登記機關登記其事由。
 
-* 115.1 對於薪資或其他繼續性給付之債權所為強制執行，於債權人之債權額及強制執行費用額之範圍內，其效力及於扣押後應受及增加之給付。
+* 115.1 對於薪資或其他繼續性給付之債權所為強制執行，於債權人之債權額及強制執行費用額之範圍內，其效力及於扣押後應受及增加之給付。前項債務人於扣押後應受及增加之給付，執行法院得以命令移轉於債權人。但債務人喪失其權利或第三人喪失支付能力時，債權人債權未受清償部分，移轉命令失其效力，得聲請繼續執行。並免徵執行費。
+
+> 釋：對於薪資或其他繼續性給付債權所為強制執行之效力，固及於扣押後債務人繼續應受及增加之給付，惟為使債權人之債權獲致滿足清償，並免案件長時稽延，執行法院自得審酌個案之情況，核發移轉命令，以利執行。但為確保債權人之權益，亦宜明定嗣後如債務人喪失其權利或第三人喪失支付能力時，債權人債權未受清償部分，移轉命令失其效力，得聲請繼續執行，並免徵執行費，爰增設第二項規定，以期周延。
 
 * 115.2 第三人於執行法院發第一百十五條第二項命令前，得將對債務人之金錢債權全額或扣押部分提存於清償地之提存所。第三人於依執行法院許債權人收取或向執行法院支付轉給債權人之命令辦理前，又收受扣押命令，而其扣押之金額超過債務人之金錢債權未受扣押部分者，應即將該債權之全額支付扣押在先之執行法院。第三人已為提存或支付時，應向執行法院陳明其事由。
 
