--- a/司法-民事/民法第二編債.md
+++ b/司法-民事/民法第二編債.md
@@ -294,9 +294,9 @@
 
 > 釋：一、本條新增。二、為使社會大眾普遍知法、守法起見，宜於本法中列原則性規定，明定附合契約之意義，並為防止此類契約自由之濫用及維護交易之公平，列舉四款有關他方當事人利害之約定，如按其情形顯失公平者，明定該部分之約定為無效。
 
-* 248 訂約當事人之一方，由他方受有訂金時，推定其契約成立。
+* 248 訂約當事人之一方，由他方受有定金時，推定其契約成立。
 
-> 釋：原條文末句規定其契約「視為「成立，則不問當事人交付定金之目的為何，既收定金，即認契約為成立，忽視當事人之真意，爰改為「推定」，倘有反證，許為相反之主張，俾能符合訂約者之原意。
+> 釋：「訂金」係「定金」之誤繕，予以修正。
 
 * 249 定金，除當事人另有訂定外，適用左列之規定：一、契約履行時，定金應返還或作為給付之一部。二、契約因可歸責於付定金當事人之事由，致不能履行時，定金不得請求返還。三、契約因可歸責於受定金當事人之事由，致不能履行時，該當事人應加倍返還其所受之定金。四、契約因不可歸責於雙方當事人之事由，致不能履行時，定金應返還之。
 
