公職人員選舉罷免法 2000.6.30

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -22,9 +22,9 @@
 
 > 釋：一、配合地方制度法制化，於第一項增列省（市）長選舉。二、其餘未修正。
 
-* 8 中央選舉委員會隸屬行政院，置委員若干人，由行政院院長提請總統派充之，並指定一人為主任委員；其組織規程，由行政院擬定，呈請總統核定之。省（市）選舉委員會隸屬中央選舉委員會，各置委員若干人，由中央選舉委員會提請行政院院長派充之，並指定一人為主任委員。縣（市）選舉委員會隸屬省選舉委員會，各置委員若干人，由省選舉委員會遴報中央選舉委員會派充之，並指定一人為主任委員。省（市）、縣（市）選舉委員會組織規程，均由中央選舉委員會擬定，報請行政院核定。各選舉委員會委員，應有無黨籍人士；其具有同一黨籍者，在中央選舉委員會不得超過委員總額五分之二，在省（市）、縣（市）選舉委員會不得超過各該選舉委員會委員總額二分之一。各級選舉委員會，應依據法令公正行使職權。
+* 8 中央選舉委員會隸屬行政院，置委員若干人，由行政院院長提請總統派充之，並指定一人為主任委員；其組織另以法律定之。省（市）選舉委員會隸屬中央選舉委員會，各置委員若干人，由中央選舉委員會提請行政院院長派充之，並指定一人為主任委員。縣（市）選舉委員會隸屬省選舉委員會，各置委員若干人，由省選舉委員會遴報中央選舉委員會派充之，並指定一人為主任委員。省（市）、縣（市）選舉委員會組織規程，均由中央選舉委員會擬定，報請行政院核定。各選舉委員會委員，應有無黨籍人士；其具有同一黨籍者，在中央選舉委員會不得超過委員總額五分之二，在省（市）、縣（市）選舉委員會不得超過各該選舉委員會委員總額二分之一。各級選舉委員會，應依據法令公正行使職權。
 
-> 釋：一、第一項配合第五項之增列酌作文字修正。二、為增進選舉委員會公正超然性，增列第五項明定各選舉委員會應有無黨籍人士及其委員具有同一黨籍者之名額限制。
+> 釋：辦理選舉之中央選舉委員會之組織，應儘速完成法制化，以法律定之，其組織透過法律之規範，方可避免選舉機關受政治干擾，確保職權獨立、超然運作，並符法制。爰修正第一項明定中央選委委員會，其組織另以法律定之。
 
 * 9 公職人員罷免，由各級選舉委員會辦理，並準用第七條之規定。
 
@@ -478,7 +478,9 @@
 
 * 111 本法所定罰鍰，由選舉委員會裁定；經通知後逾期不繳納者，移送法院強制執行。
 
-* 112 本法施行細則，由內政部擬訂，報請行政院核定之。
+* 112 本法施行細則，由中央選舉委員會擬訂，報請行政院核定之。
+
+> 釋：修正本法施行細則由中央選舉委員會擬訂，貫徹選舉機關適用選罷法公平、公正、公開之特性，且符合行政機關適用法律，權責一致之精神。
 
 * 113 本法自公布日施行。
 
