刑事訴訟法 2000.6.30

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -614,9 +614,9 @@
 
 * 244 自首向檢察官或司法警察官為之者，準用第二百四十二條之規定。
 
-* 245 偵查，不公開之。被告或犯罪嫌疑人之辯護人，得於檢察官、司法警察官或司法警察訊問該被告或犯罪嫌疑人時在場。但有事實足認其在場有妨害國家機密或有湮滅、偽造、變造證據或勾串共犯或證人或妨害他人名譽之虞，或其行為不當足以影響偵查秩序者，得限制或禁止之。辯護人因偵查中執行職務所知悉之事項，不得洩漏。偵查中訊問被告或犯罪嫌疑人時，應將訊問之日、時及處所通知辯護人。但情形急迫者，不在此限。
+* 245 偵查，不公開之。被告或犯罪嫌疑人之辯護人，得於檢察官、檢察事務官、司法警察官或司法警察訊問該被告或犯罪嫌疑人時在場，並得陳述意見。但有事實足認其在場有妨害國家機密或有湮滅、偽造、變造證據或勾串共犯或證人或妨害他人名譽之虞，或其行為不當足以影響偵查秩序者，得限制或禁止之。檢察官、檢察事務官、司法警察官、司法警察、辯護人、告訴代理人或其他於偵查程序依法執行職務之人員，除依法令或為維護公共利益或保護合法權益有必要者外，不得公開揭露偵查中因執行職務知悉之事項。偵查中訊問被告或犯罪嫌疑人時，應將訊問之日、時及處所通知辯護人。但情形急迫者，不在此限。
 
-> 釋：一、第一項不修正。二、為使實施偵查程序之公務員對被告或犯罪嫌疑人合法實施偵訊，並確保被告或犯罪嫌疑人之合法權益，爰修正本條增列第二項，規定辯護人得於檢察官訊問被告或司法警察官、司法警察調查犯罪嫌疑人時在場。又為確保國家機密，及防止偽造、變造證據，或勾串共犯或證人，及維護他人之名譽與偵查程序之正常進行，如偵查中訊問被告時辯護人之到場毫無限制，亦非所宜，故設第二項但書之規定，以期周密。三、偵查中被告或犯罪嫌疑人之辯護人，雖得依本條第二項規定在場，惟其對於因執行職務所知悉之事項，應不得洩漏，以免妨害偵查之順利進行，爰於第三項明定辯護人之守密義務，以保偵查秘密。四、為使辯護人能於檢察官訊問被告時到場，故增列第四項規定。
+> 釋：一、修正本條第二項賦予偵查中在場之辯護人陳述意見之機會，以強化被告或犯罪嫌疑人之防禦權，並示區別偵查中之表示意見與審理中之辯論有所不同。二、為配合法院組織法第六十六條之二、第六十六條之三之增訂，於第二項、第三項增列檢察事務官為執行偵查職務之人員。三、修正增訂第三項，規定於偵查程序依法執行職務之人員除依法令或為維護公共利益或保護合法權益有必要者外，不得公開揭露偵查中執行職務知悉之事項，藉以折衷調和。四、參與偵查程序之人無故洩漏偵查程序中所知悉之事項者，刑法第一百三十二條、第三百十六條分別定有處罰明文，爰刪除原第三項。
 
 * 246 遇被告不能到場，或有其他必要情形，得就其所在訊問之。
 
